tests/conditional/conditional.exp
Error --------------------------------------------------------------------------------------------- conditional.js:16:17

This condition is likely falsy.
[WARNING]: Flow's type inference may be incorrect that it could be null at runtime (due to `any` annotations,
out-of-bounds array accesses, etc.). If the check is valid, you might want to make [1] nullable (`T` -> `?T`).
[constant-condition]

   conditional.js:16:17
   16|   const temp = (x ? 1 : x); // constant-condition error
                       ^

References:
   conditional.js:15:13
   15|   const x = false;
                   ^^^^^ [1]


Error --------------------------------------------------------------------------------------------- conditional.js:23:24

Cannot return `x != null ? x : x != null` because number [1] is incompatible with string [2]. [incompatible-type]

   conditional.js:23:24
   23|   return (x != null) ? x : (x != null);
                              ^

References:
   conditional.js:22:11
   22|   var x: ?number = null;
                 ^^^^^^ [1]
   conditional.js:20:15
   20| function d(): string { // expected `: number | boolean`
                     ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- conditional.js:23:29

Cannot return `x != null ? x : x != null` because boolean [1] is incompatible with string [2]. [incompatible-type]

   conditional.js:23:29
   23|   return (x != null) ? x : (x != null);
                                   ^^^^^^^^^ [1]

References:
   conditional.js:20:15
   20| function d(): string { // expected `: number | boolean`
                     ^^^^^^ [2]



Found 3 errors
